[project]
name = "pretix-fontpack-blivande"
dynamic = ["version"]
description = "Pack of free fonts for Blivande"
readme = "README.rst"
requires-python = ">=3.9"
license = {file = "LICENSE"}
keywords = ["pretix"]
authors = [
    {name = "Philip Shevin", email = "philip390@gmail.com"},
]
maintainers = [
    {name = "Philip Shevin", email = "philip390@gmail.com"},
]

dependencies = [

]

[project.entry-points."pretix.plugin"]
pretix_fontpackblivande = "pretix_fontpackblivande:PretixPluginMeta"

[project.entry-points."distutils.commands"]
build = "pretix_plugin_build.build:CustomBuild"

[build-system]
requires = [
    "setuptools",
    "pretix-plugin-build",
]

[project.urls]
homepage = "https://github.com/phptanker/pretix-fontpack-blivande"

[tool.setuptools]
include-package-data = true

[tool.setuptools.dynamic]
version = {attr = "pretix_fontpackblivande.__version__"}

[tool.setuptools.packages.find]
include = ["pretix*"]
namespaces = false
